Fix spacing of rotational brushes

The rotation should be counted not in the characteristic size but in the
elliptical equation for the spacing.

BUG:329026