krita/image/kis_distance_information.cpp
@@ -22,6 +22,7 @@
 #include "kis_debug.h"
 #include <QtCore/qmath.h>
 #include <QVector2D>
+#include <QTransform>
 
 
 struct KisDistanceInformation::Private {
@@ -167,8 +168,21 @@ qreal KisDistanceInformation::getNextPointPositionAnisotropic(const QPointF &sta
     qreal x = m_d->distance.x();
     qreal y = m_d->distance.y();
 
-    qreal dx = qAbs(end.x() - start.x());
-    qreal dy = qAbs(end.y() - start.y());
+    static const qreal eps = 2e-3; // < 0.2 deg
+    const qreal currentRotation = m_d->spacing.rotation();
+
+    QPointF diff = end - start;
+
+    if (currentRotation > eps) {
+        QTransform rot;
+        // since the ellipse is symmetrical, the sign
+        // of rotation doesn't matter
+        rot.rotateRadians(currentRotation);
+        diff = rot.map(diff);
+    }
+
+    qreal dx = qAbs(diff.x());
+    qreal dy = qAbs(diff.y());
 
     qreal alpha = pow2(dx * a_rev) + pow2(dy * b_rev);
     qreal beta = x * dx * a_rev * a_rev + y * dy * b_rev * b_rev;
@@ -185,8 +199,7 @@ qreal KisDistanceInformation::getNextPointPositionAnisotropic(const QPointF &sta
             t = k;
             m_d->distance = QPointF();
         } else {
-            QPointF diff = end - start;
-            m_d->distance += QPointF(qAbs(diff.x()), qAbs(diff.y()));
+            m_d->distance += qAbs(diff);
         }
     } else {
         qWarning() << "BUG: No solution for elliptical spacing equation has been found. This shouldn't have happened.";
